--- a/mobileapp/mobileapp/Views/RegisterUserSetPassword.xaml
+++ b/mobileapp/mobileapp/Views/RegisterUserSetPassword.xaml
@@ -24,8 +24,8 @@
                 </StackLayout>
             </ScrollView>
             <StackLayout Orientation="Horizontal" VerticalOptions="End">
-                <Button Text="Skip and continue" HorizontalOptions="FillAndExpand" BackgroundColor="{Binding DividerColor}"
-                        Command="{Binding GotoNextPageCommand}"></Button>
+                <!--<Button Text="Skip and continue" HorizontalOptions="FillAndExpand" BackgroundColor="{Binding DividerColor}"
+                        Command="{Binding GotoNextPageCommand}"></Button>-->
                 <Button Text="Save and Next" HorizontalOptions="FillAndExpand"
                         Command="{Binding GotoSaveCommand}"
                     BackgroundColor="{Binding DarkPrimaryColor}"></Button>
