--- a/mobileapp/mobileapp/Views/Login.xaml
+++ b/mobileapp/mobileapp/Views/Login.xaml
@@ -8,7 +8,7 @@
     <ContentPage.Content>
         <StackLayout HorizontalOptions="Center" WidthRequest="225" VerticalOptions="CenterAndExpand">
             <!--<Label FontSize="Large" HorizontalTextAlignment="Center" Margin="0, 50">BID ON TASK</Label>-->
-            <Image Source="bidontask.png" Margin="0, 50"></Image>
+            <Image Source="bidontask2.png" WidthRequest="211" HeightRequest="71" Aspect="Fill" Margin="0, 50"></Image>
             <Entry Placeholder="Username" HorizontalTextAlignment="Center"></Entry>
             <Entry Placeholder="Password" IsPassword="True" HorizontalTextAlignment="Center"></Entry>
             <Button Text="Sign in" HorizontalOptions="Center" WidthRequest="100" BackgroundColor="{Binding DarkPrimaryColor}"
@@ -16,7 +16,7 @@
             <StackLayout Orientation="Horizontal" Margin="0, 50" Padding="10">
                 <controls:HyperLinkLabel NavigateCommand="{Binding GotoForgotPasswordCommand}" 
                                          Text="Forgot passoword?"
-                                         TextColor="{Binding AccentColor}}" HorizontalOptions="StartAndExpand"></controls:HyperLinkLabel>
+                                         TextColor="{Binding AccentColor}" HorizontalOptions="StartAndExpand"></controls:HyperLinkLabel>
                 <controls:HyperLinkLabel NavigateCommand="{Binding GotoRegisterUserCommand}" 
                                          TextColor="{Binding AccentColor}"
                                          Text="Register" HorizontalTextAlignment="End" HorizontalOptions="EndAndExpand"></controls:HyperLinkLabel>
